# data-science-workflow

./: .gitignore  README.md  bibliography.bib  inject_scrollable_css.py  intro.md  myst.yml  publish-lecture-06.sh  publish-lecture-07.sh  publish-lecture-08.sh  publish-lecture-09.sh  publish-lecture-10.sh  pyproject.toml  requirements.txt  session1_data_acquisition.ipynb  session1_intro_data_acquisition.ipynb  session2_cluster_experiment_logging.ipynb  session3_data_exploration_quality.ipynb  session4_model_training_evaluation.ipynb  session5_dashboards_demos.ipynb
.github/workflows/: deploy.yml
DSA/: data science applications Plan.md
DSA-sessions/: README.md  lecture-06.md  lecture-07.md  lecture-08.md  lecture-09.md  lecture-10.md  lectures-06-10-overview.md  requirements.md  session10_two_tower_multimodal.ipynb  session10_two_tower_multimodal.slides.html  session6_recommendation_problem.ipynb  session6_recommendation_problem.slides.html  session7_content_based_methods.ipynb  session7_content_based_methods.slides.html  session8_matrix_factorization.ipynb  session8_matrix_factorization.slides.html  session9_neural_embeddings.ipynb  session9_neural_embeddings.slides.html
DSW/: session1_data_acquisition.ipynb  session2_cluster.ipynb
DSW-sessions/: requirements.txt  session1_data_acquisition.ipynb  session2_cluster.ipynb  session3_data_quality.ipynb  session4_model_training_evaluation.ipynb  session5_demos.ipynb
downloads/: books.csv  streamlit_example.py  wandb_example.py  wandb_example_requirements.txt
downloads/cluster/: Dockerfile  remote-deployment.yml  (+1 more)
(+8 files in other folders)
