[project]
name = "data-science-workflow"
version = "0.1.0"
description = "Data science workflow"
readme = "README.md"
requires-python = "~=3.12.0"  # Strictly limit to Python 3.12.x
dependencies = [
    "openml==0.15.1",
    "scikit-learn>=1.4.0,<1.5.0",
    "pandas>=2.2.0,<2.3.0",
    "numpy>=1.26.0", # Remove the <2.1.0 cap
    "matplotlib==3.9.0",
    "jupyterlab>=4.2.0",
    "beautifulsoup4==4.12.3",
    "requests==2.32.3",
    "lxml>=5.2.0",
    "selenium>=4.21.0",
    "scipy>=1.10.0,<1.13.0",
    "statsmodels==0.14.2",
    "wandb>=0.17.0",
    "ydata-profiling==4.18.4",
    "great_expectations==1.17.0",
    "ipywidgets==8.1.3",
    "autogluon>=1.2.0",
    "codecarbon",
    "fairlearn",
    "tab-err",
    "setuptools>=82.0.1",
]
